# github-sdv-poc-raspberry-data-collector

./: .cmake-format.yaml  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile
buildspec/: integration-test.yaml  unit-test.yaml
src/: main.cpp
test/integration/: conftest.py  pyproject.toml  requirements.txt
test/integration/src/: logger.py
test/integration/src/applications/cloud_cli/: base_cloud_client.py  cloud_provider.py  conftest.py
test/integration/src/applications/services/: base_client.py  base_docker_client.py
test/integration/src/artifacts_collectors/: tests_artifact_collector.py
test/integration/src/config/: config.py
test/integration/src/config/converters/: array_converter.py  base_converter.py  bool_converter.py  int_converter.py  string_converter.py
test/integration/src/config/providers/: base_config.py  config_from_env_provider.py  config_from_json_provider.py
test/integration/src/config/run_modes/: modes_provider.py
test/integration/src/config/validators/: aws_mandatory.py  azure_mandatory.py  base_validator.py  not_none_validator.py  optional_validator.py
test/integration/src/enums/: cloud_providers.py  docker_tags.py  extended_enum.py  marks.py  platforms.py  run_modes.py  tc_management_adaptors.py
test/integration/src/helpers/: customize_marks.py  helpers.py
test/integration/src/testcase_management/test_results_adaptors/: adaptors_provider.py
test/integration/tests/data_collector/: test_dc_integration_aws.py
test/integration/tests/ota_updater/: test_ota_updater_integration_aws.py
(+31 files in other folders)
